# AoC25

./: .clang-format  CMakeLists.txt
Source/Day1/Part1/: SecretEntrance.cpp
Source/Day1/Part2/: SecretEntrance.cpp
Source/Day2/Part1/: GiftShop.cpp
Source/Day2/Part2/: GiftShop.cpp
Source/Day4/Part1/: PrintingDepartment.cpp
